lab1/Code_old/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt

   32 DefList: Def DefList
   33        | %empty

   34 Def: Specifier DecList SEMI

   35 DecList: Dec
   36        | Dec COMMA DecList

   37 Dec: VarDec
   38    | VarDec ASSIGNOP Exp

   39 Exp: Exp ASSIGNOP Exp
   40    | Exp AND Exp
   41    | Exp OR Exp
   42    | Exp RELOP Exp
   43    | Exp PLUS Exp
   44    | Exp MINUS Exp
   45    | Exp STAR Exp
   46    | Exp DIV Exp
   47    | LP Exp RP
   48    | MINUS Exp
   49    | NOT Exp
   50    | ID LP Args RP
   51    | ID LP RP
   52    | Exp LB Exp RB
   53    | Exp DOT ID
   54    | ID
   55    | INT
   56    | FLOAT

   57 Args: Exp COMMA Args
   58     | Exp

   59 Stmt: error SEMI

   60 CompSt: error RC

   61 Exp: error RP


Terminals, with rules where they appear

$end (0) 0
error (256) 59 60 61
INT (258) 17 55
FLOAT (259) 56
PLUS (260) 43
MINUS (261) 44 48
STAR (262) 45
DIV (263) 46
AND (264) 40
OR (265) 41
NOT (266) 49
LP (267) 18 19 29 30 31 47 50 51
RP (268) 18 19 29 30 31 47 50 51 61
LB (269) 17 52
RB (270) 17 52
LC (271) 11 23
RC (272) 11 23 60
STRUCT (273) 11 12
RETURN (274) 28
IF (275) 29 30
ELSE (276) 30
WHILE (277) 31
ID (278) 13 15 16 18 19 50 51 53 54
ASSIGNOP (279) 38 39
RELOP (280) 42
DOT (281) 53
TYPE (282) 9
SEMI (283) 4 5 26 28 34 59
COMMA (284) 8 20 36 57
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 22 34
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17, on right: 7 8 17 22 37 38
FunDec (41)
    on left: 18 19, on right: 6
VarList (42)
    on left: 20 21, on right: 18 20
ParamDec (43)
    on left: 22, on right: 20 21
CompSt (44)
    on left: 23 60, on right: 6 27
StmtList (45)
    on left: 24 25, on right: 23 24
Stmt (46)
    on left: 26 27 28 29 30 31 59, on right: 24 29 30 31
DefList (47)
    on left: 32 33, on right: 11 23 32
Def (48)
    on left: 34, on right: 32
DecList (49)
    on left: 35 36, on right: 34 36
Dec (50)
    on left: 37 38, on right: 35 36
Exp (51)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    61, on right: 26 28 29 30 31 38 39 40 41 42 43 44 45 46 47 48 49
    52 53 57 58
Args (52)
    on left: 57 58, on right: 50 57


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 21
    COMMA  shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 23
    LC     shift, and go to state 24

    CompSt  go to state 25


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    RP      shift, and go to state 29
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 33


State 22

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 16


State 23

   60 CompSt: error . RC

    RC  shift, and go to state 36


State 24

   23 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 28


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   34 Def: Specifier . DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 27

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 41


State 28

   32 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 28


State 29

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 30

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 43


State 31

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 32

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 21 (VarList)


State 33

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


State 34

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 35

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 36

   60 CompSt: error RC .

    $default  reduce using rule 60 (CompSt)


State 37

   23 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 24
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    ID      shift, and go to state 56

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 38

   17 VarDec: VarDec . LB INT RB
   37 Dec: VarDec .
   38    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 21
    ASSIGNOP  shift, and go to state 61

    $default  reduce using rule 37 (Dec)


State 39

   34 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


State 40

   35 DecList: Dec .
   36        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 35 (DecList)


State 41

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 42

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


State 43

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 21

    $default  reduce using rule 22 (ParamDec)


State 44

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 45

   20 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 32


State 46

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 47

   59 Stmt: error . SEMI
   60 CompSt: error . RC
   61 Exp: error . RP

    RP    shift, and go to state 65
    RC    shift, and go to state 36
    SEMI  shift, and go to state 66


State 48

   55 Exp: INT .

    $default  reduce using rule 55 (Exp)


State 49

   56 Exp: FLOAT .

    $default  reduce using rule 56 (Exp)


State 50

   48 Exp: MINUS . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 68


State 51

   49 Exp: NOT . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 69


State 52

   47 Exp: LP . Exp RP

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 70


State 53

   28 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 71


State 54

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 72


State 55

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 73


State 56

   50 Exp: ID . LP Args RP
   51    | ID . LP RP
   54    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 54 (Exp)


State 57

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 58

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 75


State 59

   24 StmtList: Stmt . StmtList

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 24
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    ID      shift, and go to state 56

    RC  reduce using rule 25 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 76
    Stmt      go to state 59
    Exp       go to state 60


State 60

   26 Stmt: Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    LB        shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86
    SEMI      shift, and go to state 87


State 61

   38 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 88


State 62

   34 Def: Specifier DecList SEMI .

    $default  reduce using rule 34 (Def)


State 63

   36 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 89
    Dec      go to state 40


State 64

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 65

   61 Exp: error RP .

    $default  reduce using rule 61 (Exp)


State 66

   59 Stmt: error SEMI .

    $default  reduce using rule 59 (Stmt)


State 67

   61 Exp: error . RP

    RP  shift, and go to state 65


State 68

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   48    | MINUS Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    AND       shift, and go to state 81
    OR        shift, and go to state 82
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86

    $default  reduce using rule 48 (Exp)


State 69

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | NOT Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84

    $default  reduce using rule 49 (Exp)


State 70

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   47    | LP Exp . RP
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    RP        shift, and go to state 90
    LB        shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86


State 71

   28 Stmt: RETURN Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    LB        shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86
    SEMI      shift, and go to state 91


State 72

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 92


State 73

   31 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 93


State 74

   50 Exp: ID LP . Args RP
   51    | ID LP . RP

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    RP     shift, and go to state 94
    ID     shift, and go to state 56

    Exp   go to state 95
    Args  go to state 96


State 75

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 76

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


State 77

   43 Exp: Exp PLUS . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 97


State 78

   44 Exp: Exp MINUS . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 98


State 79

   45 Exp: Exp STAR . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 99


State 80

   46 Exp: Exp DIV . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 100


State 81

   40 Exp: Exp AND . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 101


State 82

   41 Exp: Exp OR . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 102


State 83

   52 Exp: Exp LB . Exp RB

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 103


State 84

   39 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 104


State 85

   42 Exp: Exp RELOP . Exp

    error  shift, and go to state 67
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    ID     shift, and go to state 56

    Exp  go to state 105


State 86

   53 Exp: Exp DOT . ID

    ID  shift, and go to state 106


State 87

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 88

   38 Dec: VarDec ASSIGNOP Exp .
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    LB        shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86

    $default  reduce using rule 38 (Dec)


State 89

   36 DecList: Dec COMMA DecList .

    $default  reduce using rule 36 (DecList)


State 90

   47 Exp: LP Exp RP .

    $default  reduce using rule 47 (Exp)


State 91

   28 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 92

   29 Stmt: IF LP Exp . RP Stmt
   30     | IF LP Exp . RP Stmt ELSE Stmt
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    RP        shift, and go to state 107
    LB        shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86


State 93

   31 Stmt: WHILE LP Exp . RP Stmt
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    RP        shift, and go to state 108
    LB        shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86


State 94

   51 Exp: ID LP RP .

    $default  reduce using rule 51 (Exp)


State 95

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID
   57 Args: Exp . COMMA Args
   58     | Exp .

    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    LB        shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86
    COMMA     shift, and go to state 109

    $default  reduce using rule 58 (Args)


State 96

   50 Exp: ID LP Args . RP

    RP  shift, and go to state 110


State 97

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   43    | Exp PLUS Exp .
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    AND       shift, and go to state 81
    OR        shift, and go to state 82
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86

    $default  reduce using rule 43 (Exp)


State 98

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   44    | Exp MINUS Exp .
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    AND       shift, and go to state 81
    OR        shift, and go to state 82
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86

    $default  reduce using rule 44 (Exp)


State 99

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   45    | Exp STAR Exp .
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    AND       shift, and go to state 81
    OR        shift, and go to state 82
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86

    $default  reduce using rule 45 (Exp)


State 100

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   46    | Exp DIV Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    AND       shift, and go to state 81
    OR        shift, and go to state 82
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86

    $default  reduce using rule 46 (Exp)


State 101

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   40    | Exp AND Exp .
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84

    $default  reduce using rule 40 (Exp)


State 102

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   41    | Exp OR Exp .
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84

    $default  reduce using rule 41 (Exp)


State 103

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   52    | Exp LB Exp . RB
   53    | Exp . DOT ID

    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    LB        shift, and go to state 83
    RB        shift, and go to state 111
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    DOT       shift, and go to state 86


State 104

   39 Exp: Exp . ASSIGNOP Exp
   39    | Exp ASSIGNOP Exp .
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84

    $default  reduce using rule 39 (Exp)


State 105

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   42    | Exp RELOP Exp .
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    AND       shift, and go to state 81
    OR        shift, and go to state 82
    ASSIGNOP  shift, and go to state 84

    $default  reduce using rule 42 (Exp)


State 106

   53 Exp: Exp DOT ID .

    $default  reduce using rule 53 (Exp)


State 107

   29 Stmt: IF LP Exp RP . Stmt
   30     | IF LP Exp RP . Stmt ELSE Stmt

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 24
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    ID      shift, and go to state 56

    CompSt  go to state 57
    Stmt    go to state 112
    Exp     go to state 60


State 108

   31 Stmt: WHILE LP Exp RP . Stmt
